# atcg2

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
atcg_lib/include/: ATCG.h
atcg_lib/include/Core/: API.h  Application.h  EntryPoint.h  Input.h  Layer.h  LayerStack.h  Window.h
atcg_lib/include/DataStructure/: Grid.h  Laplacian.h  Mesh.h  PointCloud.h  Statistics.h  Timer.h
atcg_lib/include/Events/: Event.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
atcg_lib/include/ImGui/: ImGuiLayer.h
atcg_lib/include/Math/: Functions.h  Utils.h
atcg_lib/include/OpenMesh/: OpenMesh.h
atcg_lib/include/Registration/: CPD.h  NonRigidCPD.h  Registration.h
atcg_lib/include/Renderer/: Buffer.h  Camera.h  CameraController.h  Framebuffer.h  OrthographicCamera.h  PerspectiveCamera.h  Renderer.h  Shader.h  ShaderManager.h  Texture.h  VertexArray.h
atcg_lib/src/Core/: Application.cpp  Input.cpp  LayerStack.cpp  Window.cpp
atcg_lib/src/DataStructure/: Mesh.cpp  PointCloud.cpp  Timer.cpp
atcg_lib/src/ImGui/: ImGuiLayer.cpp
atcg_lib/src/Math/: FunctionsDetail.h
atcg_lib/src/Registration/: CPD.cpp  NonRigidCPD.cpp  Registration.cpp
atcg_lib/src/Renderer/: Buffer.cpp  CameraController.cpp  Framebuffer.cpp  OrthographicCamera.cpp  PerspectiveCamera.cpp  Renderer.cpp  Shader.cpp  ShaderManager.cpp  Texture.cpp  VertexArray.cpp
exercises/: CMakeLists.txt
exercises/exercise00Intro/: source.cpp
exercises/exercise01Bezier/: CMakeLists.txt  source.cpp
shader/: base.fs  base.vs  bezier.fs  bezier.gs  circle.fs  circle.vs  edge.fs  edge.gs  edge.vs  flat.fs  flat.vs  grid.gs  grid.vs  hermite.gs  hermite.vs  screen.fs  screen.vs
theory/:  sheet-G01-landsgesell-marcic-stamm.tex  ex01.tex  ex02.ipynb  macros.tex
